fixed the horizontal scroll bar

--- a/CSS/NightTheme.css
+++ b/CSS/NightTheme.css
@@ -175,6 +175,7 @@ button.Logout{
 }
 /*Mainly apply to divs to make scrollage*/
 #Scrollable{
+	position: relative;
 	overflow: auto;
 	padding: 4px;
 }
